--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-/.vscode
-.gitignore
-/.UNIT2/Week2/Bootstrap2/CustomizeBootstrap/node_modules
+vscode/
+UNIT2/Week2/Bootstrap2/CustomizeBootstrap/node_modules/
+settings.json
+UNIT2/Week2/Bootstrap2/CustomizeBootstrap/*.json
